--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,5 +14,8 @@
     "vue": "^3.5.26",
     "vue-router": "^4.6.4"
   },
+  "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.12.2"
+  },
   "packageManager": "pnpm@10.23.0"
 }
